--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx dotenv -- npx nodemon src/server.ts",
+    "start": "nodemon --exec ts-node src/server.ts",
+    "tsc": "tsc",
     "test": "jest --coverage --setupFiles dotenv/config",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "build": "rm -r -f build; tsc --project tsconfig.build.json"
