--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "express-winston": "^4.2.0",
     "helmet": "^5.0.2",
     "http-status-codes": "^2.2.0",
+    "pg": "^8.13.1",
+    "reflect-metadata": "^0.2.2",
     "swagger-ui-express": "^4.4.0",
+    "typeorm": "^0.3.20",
     "winston": "^3.8.2",
     "yamljs": "^0.3.0"
   },
