--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,15 @@
 ALLOWED_API_KEYS=testapikey-123
 SERVICE_A_API_KEY=XXXX
+host_os=windows
+
+PORT=3000
+ENVIRONMENT=DEVELOPMENT
+LOG_TO_FILE=true
+
+# PostgreSQL
+host=localhost
+username=postgres
+db_username=postgres
+password=postgres
+dbname=auth
+schema=dev
