--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   },
   "homepage": "https://github.com/Springworks/as-typescript-microservice-template#readme",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "axios": "^0.27.2",
     "compression": "^1.7.4",
     "express": "^4.18.1",
     "express-winston": "^4.2.0",
     "helmet": "^5.0.2",
     "http-status-codes": "^2.2.0",
+    "kafkajs": "^2.2.4",
+    "multer": "^1.4.5-lts.1",
     "swagger-ui-express": "^4.4.0",
     "winston": "^3.8.2",
     "yamljs": "^0.3.0"
