--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   postgres:
     container_name: auth_contianer
@@ -13,6 +12,13 @@ services:
     volumes: 
       - postgres-data:/var/lib/postgresql/data
     restart: always
+  prom-server:
+    container_name: prometheus_container
+    image: prom/prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
 volumes:
   postgres-data: 
     driver: local
