--- a/package.json
+++ b/package.json
@@ -29,17 +29,19 @@
     "helmet": "^5.0.2",
     "http-status-codes": "^2.2.0",
     "pg": "^8.13.1",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
     "swagger-ui-express": "^4.4.0",
     "typeorm": "^0.3.20",
     "winston": "^3.8.2",
+    "winston-loki": "^6.1.3",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.1",
-    "@types/node": "^17.0.34",
+    "@types/node": "^17.0.45",
     "@types/supertest": "^2.0.12",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/yamljs": "^0.2.31",
