--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-winston": "^4.2.0",
     "helmet": "^5.0.2",
     "http-status-codes": "^2.2.0",
+    "ioredis": "^5.5.0",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "swagger-ui-express": "^4.4.0",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
+    "@types/ioredis": "^4.28.10",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.34",
     "@types/supertest": "^2.0.12",
